--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,9 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <title>Appointment Booking</title>
+    <title>Services Page</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+        integrity="sha384-rGbHfDz2L/DuqLi7nKXn1UGfNcUnJxNlkkcgr3r7S6i4jN9QZSMgaX0tVMAvz0G4" crossorigin="anonymous">
+
 </head>
 
 <body>
@@ -17,7 +19,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
-                </ul class="navbar-right">
+                </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Search</button>
@@ -29,6 +31,9 @@
     <div>
         {% block content %}{% endblock %}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-e07jjzKQ2EMX4PA9KRJWSJCqFIYG6mi7X54ETuGrjq1bF4BXQVwI2A+8c4MzrLJo"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
